syntax = "proto3";

package booking.models;

option go_package = "github.com/cobbinma/booking-platform/lib/protobuf/autogen/lang/go/booking/models";

message Booking {
  string id = 1;
  string venueId = 2;
  string email = 3;
  uint32 people = 4;
  string startsAt = 5;
  string endsAt = 6;
  uint32 duration = 7;
  string tableId = 8;
  string familyName = 9;
  string givenName = 10;
}

message Slot {
  string venueId = 1;
  string email = 2;
  uint32 people = 3;
  string startsAt = 4;
  string endsAt = 5;
  uint32 duration = 6;
}